working out issues with css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,19 @@
   text-align: center;
 }
 
+.mineblock {
+  max-width: 300px;
+}
+
+.zeldaLogo {
+  max-width: 300px;
+}
+
+.mineBG {
+  min-width: 100%;
+  
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
