fixed issues with homepage image styling

--- a/client/src/assets/css/Game.css
+++ b/client/src/assets/css/Game.css
@@ -2,8 +2,10 @@
     font-size: 200px;
 }
 
-.homeBG {
+/* .homeBG {
  display: flex;
  justify-content: center;
+ background-position: center;
  background-size: cover;
-}
+
+} */
