updated text styling and added bg image to login page

--- a/client/src/assets/css/Game.css
+++ b/client/src/assets/css/Game.css
@@ -22,3 +22,9 @@ Footer {
 .main {
     min-height: 100vh; /* or the minimum height of your content */;
   }
+
+  .imageBG {
+    background-image: url('../images/botwFieldBG.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
