updated login page

--- a/client/src/assets/css/Game.css
+++ b/client/src/assets/css/Game.css
@@ -23,8 +23,13 @@ Footer {
     min-height: 100vh; /* or the minimum height of your content */;
   }
 
-  .imageBG {
+.imageBG {
     background-image: url('../images/botwFieldBG.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   }
+
+.login {
+    display: flex;
+    justify-content: center;
+}
