added bg image to signup and centered container

--- a/client/src/assets/css/Game.css
+++ b/client/src/assets/css/Game.css
@@ -33,3 +33,9 @@ Footer {
     display: flex;
     justify-content: center;
 }
+
+.signBG {
+    background-image: url('../images/subLogoBG.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
