--- a/client/src/assets/css/Game.css
+++ b/client/src/assets/css/Game.css
@@ -51,6 +51,19 @@ Footer {
     justify-content: center;
     background-color: aliceblue;
     opacity: 90%;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-bottom: 50px;
+    padding: 20px;
+}
+
+.itemName {
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    font-size: x-large;
 }
