graham told me what css to write

--- a/client/src/assets/css/Game.css
+++ b/client/src/assets/css/Game.css
@@ -67,3 +67,15 @@ Footer {
     justify-content: center;
     font-size: x-large;
 }
+
+.text-padding {
+    padding-right: 100px;
+}
+
+.list-item {
+    padding-right: 30px;
+}
+
+.listFont {
+    font-weight: bold;
+}
