remove background image

--- a/client/src/assets/css/Game.css
+++ b/client/src/assets/css/Game.css
@@ -41,7 +41,7 @@ Footer {
 }
 
 .subBG {
-    background-image: url('../images/subBG.webp');
+    /* background-image: url('../images/subBG.webp'); */
     background-size: cover;
     background-repeat: no-repeat;
 }
